--- a/uploader/.env.example
+++ b/uploader/.env.example
@@ -1,2 +1,4 @@
 REACT_APP_ACCESS_KEY_ID=your_access_key_id
 REACT_APP_SECRET_ACCESS_KEY=your_secrete_access_key
+REACT_APP_S3_BUCKET=your_bucket_name
+REACT_APP_REGION=your_aws_region
